--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MY_CONFIG = {"hostname": "127.10.10.10", "port": "5010"}
 ATLAS_USER="admin"
 ATLAS_PASSWORD="admin123456"
-ATLAS_DB="citas_mongo"
+ATLAS_DB="db_citas_mongo"
 JWT_PRIVATE_KEY="PaRaNg4R1CuT1RiM1Cu4r0"
